--- a/bitcoin-candle-generator/package.json
+++ b/bitcoin-candle-generator/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Fransérgio de A. Mota",
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.3",
